@@ -14,6 +14,9 @@ ngIRCd 0.10.x
 
   - Fixed validation of server names containing digits.
   - Update info text of local server after re-reading configuration.
+  - Changed Numerics 265 and 266 to follow ircd 2.11.x "standards".
+  - Allow PASS syntax defined in RFC 1459 for server links, too.
+  - Enhanced ISUPPORT message (005 numeric).
   - New configuration option "PredefChannelsOnly": if set, clients can
    only join predefined channels.
 
@@ -668,4 +671,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.302.2.7 2006/12/02 13:10:44 fw Exp $
+$Id: ChangeLog,v 1.302.2.8 2006/12/02 14:26:52 fw Exp $
